--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Index.cshtml
@@ -4,105 +4,111 @@
     ViewData["Title"] = "Index";
 }
 
-<div>
-    <h2>
-        Planejamentos Cadastrados
 
-        <a class="btn btn-primary" style="float:right" asp-controller="Planejamento" asp-action="Create">Adicionar Planejamento</a>
-    </h2>
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 class="card-title">
+                                    Planejamentos Cadastrados
+                                </h2>
+                                <a class="btn btn-primary" style="float:right" asp-controller="Planejamento" asp-action="Create">Adicionar Planejamento</a>
 
-</div>
-
-<div align="right">
-    <form asp-controller="Planejamento" asp-action="Index">
-        <p>
-            <input style="height: 28pt;width: 200pt;" type="text" placeholder="Pesquise por sala " name="pesquisa">
-            <button style="margin-bottom: 0.3%;" class="btn btn-primary text-right">Pesquisar</button>
-
-        </p>
-    </form>
-</div>
-
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Código
-            </th>
-
-            <th>
-                Sala
-            </th>
-            <th>
-                Usuario
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Periodo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Horario)
-            </th>
-            <th>
-                Dia da Semana
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SalaId.Titulo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UsuarioId.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Periodo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Horario)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DiaSemana)
-                </td>
-
-                <td>
-                    <a href="@Url.Action("Details", "Planejamento", new { id = item.Id })" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Detalhes </a>
-                    <a href="@Url.Action("Edit", "Planejamento", new { id = item.Id })" class="btn btn-info btn-xs"><i class="fa fa-edit"></i> Editar </a>
-                    <a data-toggle="modal" data-target="#modal-remover-@item.Id" class="btn btn-danger btn-xs text-white"><i class="fa fa-trash"></i> Remover </a>
-
-                    <div class="modal fade bs-example-modal-sm" id="modal-remover-@item.Id" tabindex="-1" role="dialog" aria-hidden="true">
-                        <div class="modal-dialog modal-sm">
-                            <div class="modal-content text-center" style="padding: 10pt">
-                                <h5> Confirmar Remoção do Aviso ? </h5>
-
-                                <h5>Código</h5><p>@item.Id</p>
-                                <h5>Sala</h5> <p>@item.SalaId </p>
-                                <h5>Responsável</h5> <p>@item.UsuarioId.Nome</p>
-                                <h5>Período de Tempo</h5> <p>@item.Periodo</p>
-                                <h5>Horário</h5> <p>@item.Horario</p>
-                                <h5>Dia</h5> <p>@item.DiaSemana</p>
-
-                                @using (Html.BeginForm("Delete", "Planejamento", new { id = item.Id }, FormMethod.Post))
-                                {
-                                    <a class="btn btn-danger text-white" data-dismiss="modal">Cancelar</a>
-                                    <button type="submit" value="Remover" class="btn btn-success">Confimar</button>
-                                }
                             </div>
                         </div>
                     </div>
+                    <div class="card-body">
+                        <table id="table-search" class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Código
+                                    </th>
 
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                                    <th>
+                                        Sala
+                                    </th>
+                                    <th>
+                                        Usuario
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Periodo)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Horario)
+                                    </th>
+                                    <th>
+                                        Dia da Semana
+                                    </th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Id)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.SalaId.Titulo)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.UsuarioId.Nome)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Periodo)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Horario)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.DiaSemana)
+                                        </td>
+
+                                        <td>
+                                            <a href="@Url.Action("Details", "Planejamento", new { id = item.Id })" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Detalhes </a>
+                                            <a href="@Url.Action("Edit", "Planejamento", new { id = item.Id })" class="btn btn-info btn-xs"><i class="fa fa-edit"></i> Editar </a>
+                                            <a data-toggle="modal" data-target="#modal-remover-@item.Id" class="btn btn-danger btn-xs text-white"><i class="fa fa-trash"></i> Remover </a>
+
+                                            <div class="modal fade bs-example-modal-sm" id="modal-remover-@item.Id" tabindex="-1" role="dialog" aria-hidden="true">
+                                                <div class="modal-dialog modal-sm">
+                                                    <div class="modal-content text-center" style="padding: 10pt">
+                                                        <h5> Confirmar Remoção do Aviso ? </h5>
+
+                                                        <h5>Código</h5><p>@item.Id</p>
+                                                        <h5>Sala</h5> <p>@item.SalaId.Titulo </p>
+                                                        <h5>Responsável</h5> <p>@item.UsuarioId.Nome</p>
+                                                        <h5>Período de Tempo</h5> <p>@item.Periodo</p>
+                                                        <h5>Horário</h5> <p>@item.Horario</p>
+                                                        <h5>Dia</h5> <p>@item.DiaSemana</p>
+
+                                                        @using (Html.BeginForm("Delete", "Planejamento", new { id = item.Id }, FormMethod.Post))
+                                                        {
+                                                            <a class="btn btn-danger text-white" data-dismiss="modal">Cancelar</a>
+                                                            <button type="submit" value="Remover" class="btn btn-success">Confimar</button>
+                                                        }
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 @if (TempData["mensagemSucesso"] != null)
 {
@@ -116,7 +122,7 @@ else if (TempData["mensagemErro"] != null)
 @section Scripts {
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             if (document.querySelector('#mensagem-retorno'))
                 document.getElementById("mensagem-retorno").click();
         });
