--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
@@ -73,37 +73,52 @@
                 <div class="form-group align-element">
                     <a id="add-novo-horario" onclick="AdicionarNovoHorario()" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
                 </div>
+                <br />
+                <span class="text-danger" id="mensagem-erro-horarios" hidden></span>
             </div>
 
-            <div class="ocupation col-sm-8">
-                <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                        </tr>
-                    </thead>
-                    <tbody id="container-horarios">
-                        @if (Model != null)
-                        {
-                            @for (var i = 0; i < Model.Horarios.Count; i++)
-                            {
-                                <tr id="novo-horario-@i " class="horarios-planejamento">
-                                    <td>
-                                        <input class="form-control" type="time" name="Horarios[@i].HorarioInicio" hidden readonly value="@Model.Horarios[i].HorarioInicio" />
-                                        <input class="form-control" type="time" name="Horarios[@i].HorarioFim" hidden readonly value="@Model.Horarios[i].HorarioFim" />
-                                        <input class="form-control" name="Horarios[@i].DiaSemana" hidden readonly value="@Model.Horarios[i].DiaSemana" />
+                <section class="content">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Horários Adicionados</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                            <thead>
+                                                <tr>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="container-horarios">
+                                                @if (Model != null)
+                                                {
+                                                    @for (var i = 0; i < Model.Horarios.Count; i++)
+                                                    {
+                                                        <tr id="novo-horario-@i" class="horarios-planejamento">
+                                                            <td>
+                                                                <input class="form-control" type="time" name="Horarios[@i].HorarioInicio" hidden readonly value="@Model.Horarios[i].HorarioInicio" />
+                                                                <input class="form-control" type="time" name="Horarios[@i].HorarioFim" hidden readonly value="@Model.Horarios[i].HorarioFim" />
+                                                                <input class="form-control" name="Horarios[@i].DiaSemana" hidden readonly value="@Model.Horarios[i].DiaSemana" />
 
-                                        <p class="form-control"> @Model.Horarios[i].HorarioInicio / @Model.Horarios[i].HorarioFim - @Model.Horarios[i].DiaSemana</p>
-                                    </td>
+                                                                <p class="form-control"> @Model.Horarios[i].HorarioInicio / @Model.Horarios[i].HorarioFim - @Model.Horarios[i].DiaSemana</p>
+                                                            </td>
 
-                                    <td>
-                                        <a id="remove-novo-horario" onclick="RemoveNovoHorario('novo-horario-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
-                                    </td>
-                                </tr>
-                            }
-                        }
-                    </tbody>
-                </table>
-            </div>
+                                                            <td>
+                                                                <a id="remove-novo-horario" onclick="RemoveNovoHorario('novo-horario-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
+                                                            </td>
+                                                        </tr>
+                                                    }
+                                                }
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
             <div class="form-group col-sm-4">
                 <input type="submit" id="btn-create-planejamento" value="Salvar" class="btn btn-success" /> |
