--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
@@ -37,32 +37,45 @@
                 </div>
             </div>
 
-            <div class="ocupation col-sm-12">
-                <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                        </tr>
-                    </thead>
-                    <tbody id="container-responsaveis">
-                        @if (Model != null)
-                        {
-                            @for (var i = 0; i < Model.Responsaveis.Count;i++)
-                            {
-                                <tr id="novo-responsavel-@i" class="responsavel-sala">
-                                    <td>
-                                        <input class="form-control" name="Responsaveis[@i].Id" hidden  value = "@Model.Responsaveis[i].Id"/>
-                                        <p class="form-control" type="time"> @Model.Responsaveis[i].Cpf | @Model.Responsaveis[i].Nome </p>
-                                    </td>
-                                    <td>
-                                        <a id="remove-novo-horario"  onclick="removeNovoResponsavel('novo-responsavel-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
-                                    </td>
-                                </tr>
-                            }
-                        }
-                    </tbody>
-                </table>
-            </div>
-
+            <section class="content">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3 class="card-title">Responsáveis Adicionados</h3>
+                                </div>
+                                <div class="card-body">
+                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                        <thead>
+                                            <tr>
+                                               
+                                            </tr>
+                                        </thead>
+                                        <tbody id="container-responsaveis">
+                                            @if (Model != null)
+                                            {
+                                                @for (var i = 0; i < Model.Responsaveis.Count; i++)
+                                                {
+                                                    <tr id="novo-responsavel-@i" class="responsavel-sala">
+                                                        <td>
+                                                            <input class="form-control" name="Responsaveis[@i].Id" hidden value="@Model.Responsaveis[i].Id" />
+                                                            <p class="form-control" type="time"> @Model.Responsaveis[i].Cpf | @Model.Responsaveis[i].Nome </p>
+                                                        </td>
+                                                        <td>
+                                                            <a id="remove-novo-horario" onclick="removeNovoResponsavel('novo-responsavel-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
+                                                        </td>
+                                                    </tr>
+                                                }
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="form-group col-md-8">
                 <input type="submit" id="btn-create-sala-exclusiva" value="Salvar" class="btn btn-success" /> |
                 <a class="btn btn-primary" asp-action="Index">Voltar</a>
