--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Usuario/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Usuario/Create.cshtml
@@ -4,33 +4,71 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<div class="card">
+    <div class="card-body register-card-body">
+        <p class="login-box-msg">Criar Novo Usuário</p>
 
-<h4>UsuarioModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
         <form asp-action="Create" asp-controller="usuario">
-            <div class="form-group">
-                <label asp-for="Cpf" class="control-label"></label>
-                <input asp-for="Cpf" class="form-control" />
+            <div class="input-group mb-3">
+                <input asp-for="Nome" class="form-control" placeholder="Nome" />
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-user"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
+            <div class="input-group mb-3">
+                <input id="login_auth" asp-for="Cpf" class="form-control" placeholder="CPF" oninput="validaCpf()">
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-id-card"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
+            <span id="span_cpf" asp-validation-for="Cpf" class="invalid-msg invalid-feedback"></span>
+            <div class="input-group mb-3">
+                <input type="date" asp-for="DataNascimento" class="form-control" placeholder="Data de nascimento" />
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-birthday-cake"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-default" />
+            <div class="input-group mb-3">
+                <input id="senha_auth" asp-for="Senha" class="form-control" placeholder="Senha" />
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-lock"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8">
+                    <div class="icheck-primary">
+                        <input type="checkbox" id="show_pass" onchange="showPass(this)">
+                        <label for="show_pass">
+                            Mostrar Senha
+                        </label>
+                    </div>
+                </div>
+                <!-- /.col -->
+                <div class="col-4">
+                    <input type="submit" value="Criar" class="btn btn-primary btn-block" />
+                </div>
+                <!-- /.col -->
             </div>
         </form>
+        <hr />
+        <a href="@Url.Action("Index", "Login")" class="text-center">Já possui cadastrado?</a>
     </div>
-</div>
+    <!-- /.form-box -->
+</div><!-- /.card -->
 
-<div>
-    <a asp-action="Index" asp-controller="login">Voltar para o login</a>
-</div>
+@section Scripts {
+    <!-- Scripts -->
+    <script src="~/plugins/jquery/jquery.min.js"></script>
+    <script src="~/plugins/inputmask/min/inputmask/inputmask.min.js"></script>
+    <script src="~/plugins/inputmask/min/inputmask/jquery.inputmask.min.js"></script>
+    <script src="~/js/customLogin.js"></script>
 
+}
