--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/site.css
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/site.css
@@ -43,7 +43,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 .footer {
   position: absolute;
